プラグインの適用順と状態の記録を実装
PluginInfo.cs内の保存、読み込み処理を変更
Extensions.csを新規追加

--- a/TextClipper/Views/MainWindow.xaml
+++ b/TextClipper/Views/MainWindow.xaml
@@ -74,7 +74,7 @@
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <CheckBox Cursor="Hand" ToolTip="{Binding Plugin.Description}" Style="{StaticResource CaptionControlStyle}" IsChecked="{Binding IsEnabled, Mode=TwoWay}" Width="{Binding ActualHeight, RelativeSource={RelativeSource Self}}">
-                                <i:Interaction.Behaviors> <!--Description, RelativeSource={RelativeSource AncestorType=Window}-->
+                                <i:Interaction.Behaviors>
                                     <b:BeginDragBehavior AllowedEffects="Move" DragDropData="{Binding}"/>
                                 </i:Interaction.Behaviors>
                                 <CheckBox.Template>
